...
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/search_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_city_hint"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:padding="16dp"/>
...
            android:text="@string/error_loading_cities"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/suggests_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_city_suggest"
        tools:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
...
