<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.weather.WeatherActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="InconsistentLayout">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:src="@drawable/ic_settings_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/weather_button_city"
                app:layout_constraintHorizontal_bias="0.82"
                app:layout_constraintLeft_toRightOf="@+id/weather_button_city"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/weather_button_city"/>

            <Spinner
                android:id="@+id/weather_button_city"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:gravity="center"
                android:paddingEnd="@dimen/text_margin"
                app:layout_constraintBottom_toTopOf="@+id/weather_text_temperature"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed"
                tools:ignore="RtlSymmetry"
                tools:listitem="@layout/item_city_suggest"
                tools:text="Moscow"/>


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/weather_text_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_weather_button_city"
                android:paddingBottom="@dimen/text_margin"
                android:paddingEnd="@dimen/text_big_margin"
                android:paddingStart="@dimen/text_big_margin"
                android:paddingTop="@dimen/text_margin"
                android:text="@string/n_a"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_medium_size"
                app:layout_constraintBottom_toTopOf="@+id/center_circle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_button_city"/>

            <ImageView
                android:id="@+id/center_circle"
                android:layout_width="256dp"
                android:layout_height="256dp"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_text_temperature"/>

            <ImageView
                android:id="@+id/weather_icon_condition"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_connection_wifi"
                app:layout_constraintBottom_toBottomOf="@+id/center_circle"
                app:layout_constraintLeft_toLeftOf="@+id/center_circle"
                app:layout_constraintRight_toRightOf="@+id/center_circle"
                app:layout_constraintTop_toTopOf="@+id/center_circle"/>

            <TextView
                android:id="@+id/weather_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/no_server_connection"
                android:textSize="@dimen/text_large_size"
                app:layout_constraintBottom_toTopOf="@+id/weather_subtitle"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/center_circle"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed"/>


            <TextView
                android:id="@+id/weather_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/please_try_again"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium_size"
                app:layout_constraintBottom_toTopOf="@+id/arrow_image_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weather_title"/>

            <ImageButton
                android:id="@+id/arrow_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="InconsistentLayout"/>

            <android.support.constraint.Guideline
                android:id="@+id/bottom_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="567dp"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/forecast_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/weather_text_latest_update"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottom_guideline"
                app:layout_constraintVertical_chainStyle="packed"
                tools:listitem="@layout/item_forecast"/>

            <TextView
                android:id="@+id/weather_text_latest_update"
                style="@style/App.Weather.Text.LatestUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forecast_container"
                app:layout_constraintVertical_bias="1.0"
                tools:text="Updated 15:00"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.v4.widget.SwipeRefreshLayout>

